--- a/bmi.html
+++ b/bmi.html
@@ -173,94 +173,72 @@
         </div>
       </div>
 
+      <div id="loss">
+        <p class="mainheading">The diet for lossing weight  </p> <br>
+        <div class="row" >
+          <div class="col-lg-4"> <img src="cut.jpg" alt=""> </div>
+            <div class="col-lg-8">
+              <b class="heading"> <u> 1. Cut back on carbs </u> </b>
+              <div class="content">
+                The most important part is to cut back on sugars and starches, or carbohydrates.  <br>
+                When you do that, your hunger levels go down, and you generally end up eating significantly fewer calories (1).  <br>
+                Instead of burning carbs for energy, your body now starts burning stored fat for energy.   <br>
+                Another benefit of cutting carbs is that it lowers insulin levels, causing the kidneys to shed excess sodium and water. This reduces bloating and unnecessary water weight (2, 3Trusted Source).  <br>
+                According to some dietitians, it’s not uncommon to lose up to 10 pounds (4.5 kg) — sometimes more — in the first week of eating this way. This weight loss includes both body fat and water weight.   <br>
+                One study in healthy women with obesity reported that a very low carb diet was more effective than a low fat diet for short-term weight loss (4Trusted Source).   <br>
+                Research suggests that a low carb diet can reduce appetite, which may lead you to eat fewer calories without thinking about it or feeling hungry (5).  <br>
+                Put simply, reducing carbs can lead to quick, easy weight loss. <br>
+              </div>
+            </div>
+        </div>
 
-  <div id="loss">
-  <p class="mainheading">The diet for lossing weight  </p> <br>
+        <div class="row">
+          <div class="col-lg-8">
+            <b class="heading"> <u> 2. Eat protein, fat, and vegetables </u> </b>
+            <div class="content">
+              Each one of your meals should include a protein source, fat source, and low carb vegetables.  <br>
+              As a general rule, try eating two to three meals per day. If you find yourself hungry in the afternoon, add a fourth meal.  <br>
+              Constructing your meals in this way should bring your carb intake down to around 20–50 grams per day.  <br>
+              To see how you can assemble your meals, check out this low carb meal plan and list of 101 healthy low carb recipes.  <br>
+              Protein
+              Eating plenty of protein is an essential part of this plan.  <br>
+              Evidence suggests that eating lots of protein may boost calorie expenditure by 80–100 calories per day (6Trusted Source, 7Trusted Source, 8Trusted Source).  <br>
+              High protein diets can also reduce cravings and obsessive thoughts about food by 60%, reduce the desire to snack late at night by half, and make you feel full. In one study, people on a higher protein diet ate 441 fewer calories per day (9Trusted Source, 10Trusted Source).  <br>
+              When it comes to losing weight, protein is a crucial nutrient to think about.  <br>
 
-  <div class="row" >
-    <div class="col-lg-4"> <img src="cut.jpg" alt=""> </div>
-    <div class="col-lg-8">
-    <b class="heading"> <u> 1. Cut back on carbs </u> </b>
- 
-  <div class="content">
-The most important part is to cut back on sugars and starches, or carbohydrates.  <br>
+              <b> <u> Healthy protein sources include:  </u> </b>  <br>
+              Meat: beef, chicken, pork, and lamb  <br>
+              Fish and seafood: salmon, trout, and shrimp  <br>
+              Eggs: whole eggs with the yolk  <br>
+              Plant-based proteins: beans, legumes, and soy  <br>
+              Healthy fats  <br>
+              Don’t be afraid of eating fats. Trying to do low carb and low fat at the same time can make sticking to the diet very difficult.  <br>
 
-When you do that, your hunger levels go down, and you generally end up eating significantly fewer calories (1).  <br>
+              <b> <u> Sources of healthy fats include: </u> </b> <br>
+              olive oil  <br>
+              coconut oil <br>
+              avocado oil <br>
+              butter <br>
+            </div>
+          </div>
+          <div class="col-lg-4"> <img src="vegitable.jpg" alt="">
+          </div>
+        </div>
 
-Instead of burning carbs for energy, your body now starts burning stored fat for energy.   <br>
-
-Another benefit of cutting carbs is that it lowers insulin levels, causing the kidneys to shed excess sodium and water. This reduces bloating and unnecessary water weight (2, 3Trusted Source).  <br>
-
-According to some dietitians, it’s not uncommon to lose up to 10 pounds (4.5 kg) — sometimes more — in the first week of eating this way. This weight loss includes both body fat and water weight.   <br>
-
-One study in healthy women with obesity reported that a very low carb diet was more effective than a low fat diet for short-term weight loss (4Trusted Source).   <br>
-
-Research suggests that a low carb diet can reduce appetite, which may lead you to eat fewer calories without thinking about it or feeling hungry (5).  <br>
-
-Put simply, reducing carbs can lead to quick, easy weight loss. <br>
-</div>
-</div>
-</div>
-
-<div class="row">
-  <div class="col-lg-8">
- <b class="heading"> <u> 2. Eat protein, fat, and vegetables </u> </b>
- <div class="content">
-Each one of your meals should include a protein source, fat source, and low carb vegetables.  <br>
-
-As a general rule, try eating two to three meals per day. If you find yourself hungry in the afternoon, add a fourth meal.  <br>
-
-Constructing your meals in this way should bring your carb intake down to around 20–50 grams per day.  <br>
-
-To see how you can assemble your meals, check out this low carb meal plan and list of 101 healthy low carb recipes.  <br>
-
-Protein
-Eating plenty of protein is an essential part of this plan.  <br>
-
-Evidence suggests that eating lots of protein may boost calorie expenditure by 80–100 calories per day (6Trusted Source, 7Trusted Source, 8Trusted Source).  <br>
-
-High protein diets can also reduce cravings and obsessive thoughts about food by 60%, reduce the desire to snack late at night by half, and make you feel full. In one study, people on a higher protein diet ate 441 fewer calories per day (9Trusted Source, 10Trusted Source).  <br>
-
-When it comes to losing weight, protein is a crucial nutrient to think about.  <br>
-
-<b> <u> Healthy protein sources include:  </u> </b>  <br>
-Meat: beef, chicken, pork, and lamb  <br>
-Fish and seafood: salmon, trout, and shrimp  <br>
-Eggs: whole eggs with the yolk  <br>
-Plant-based proteins: beans, legumes, and soy  <br>
-Healthy fats  <br>
-Don’t be afraid of eating fats. Trying to do low carb and low fat at the same time can make sticking to the diet very difficult.  <br>
-
- <b> <u> Sources of healthy fats include: </u> </b> <br>
-olive oil  <br>
-coconut oil <br>
-avocado oil <br>
-butter <br>
-</div>
-</div>
-<div class="col-lg-4"> <img src="vegitable.jpg" alt=""> </div>
-</div>
-
-<div class="row">
-  <div class="col-lg-4"> <img src="weightlifting.jpg" alt="" style="height: 400px; width: 400px;" > </div>
-  <div class="col-lg-8">
-<b class="heading"> <u> 3. Lift weights three times per week </u> </b>
-<div class="content">
-You don't need> to exercise to lose weight on this plan, but it will have extra benefits.  <br>
-
-By lifting weights, you will burn lots of calories and prevent your metabolism from slowing down, which is a common side effect of losing weight (11, 12Trusted Source).  <br>
-
-Studies on low carb diets show that you can gain a bit of muscle while losing significant amounts of body fat (13). <br>
-
-Try going to the gym three to four times a week to lift weights. If you're new to the gym, ask a trainer for some advice.  <br>
-
-If lifting weights is not an option for you, doing some cardio workouts like walking, jogging, running, cycling, or swimming will suffice. Both cardio and weightlifting can help with weight loss. <br>
-</div>
-</div>
-</div>
-</div>
-
-
-    <script Src="bmi.js"> <script>
+        <div class="row">
+          <div class="col-lg-4"> <img src="weightlifting.jpg" alt="" style="height: 400px; width: 400px;" > </div>
+            <div class="col-lg-8">
+              <b class="heading"> <u> 3. Lift weights three times per week </u> </b>
+              <div class="content">
+                You don't need> to exercise to lose weight on this plan, but it will have extra benefits.  <br>
+                By lifting weights, you will burn lots of calories and prevent your metabolism from slowing down, which is a common side effect of losing weight (11, 12Trusted Source).  <br>
+                Studies on low carb diets show that you can gain a bit of muscle while losing significant amounts of body fat (13). <br>
+                Try going to the gym three to four times a week to lift weights. If you're new to the gym, ask a trainer for some advice.  <br>
+                If lifting weights is not an option for you, doing some cardio workouts like walking, jogging, running, cycling, or swimming will suffice. Both cardio and weightlifting can help with weight loss. <br>
+              </div>
+            </div>
+        </div>
+      </div>
+      <script Src="bmi.js"> <script>
 </body>
 </html>
