--- a/bmi.html
+++ b/bmi.html
@@ -239,6 +239,6 @@
             </div>
         </div>
       </div>
-      <script Src="bmi.js"> <script>
+      <script Src="bmi.js"> </script>
 </body>
 </html>
